Round bonus and billedDuration to 2 decimals

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -108,7 +108,7 @@
 					]
 				},
 				{
-					"pattern": "Employees{objectId}",
+					"pattern": "Employees/{objectId}",
 					"name": "object",
 					"target": [
 						"object"
