Use association for employees projects

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -101,7 +101,7 @@
 					]
 				},
 				{
-					"pattern": "create",
+					"pattern": "create/:objectId:",
 					"name": "create",
 					"target": [
 						"create"
